header influencer and sponsor img finished

--- a/index.html
+++ b/index.html
@@ -8,9 +8,41 @@
     <link rel="stylesheet" href="influencer.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <h1 class="infuencer-title">influencer products</h1>
+        <ul>
+          <li><a href=""> HOME</a></li>
+          <li><a href="">CONTRACT</a></li>
+          <li><a href=""> LOGIN</a></li>
+          <li><a href="">SING UP</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
-      <section></section>
+      <section class="influencer-container">
+        <div class="influencer-content">
+          <h2 class="inf-content-title">Start your Journey as Influencer</h2>
+          <p class="influencer-cntn-paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
+            Sem vestibulum sed scelerisque eros. Lectus faucibus.
+          </p>
+          <button class="btn-primary">Preebook now</button>
+        </div>
+        <div class="influencer-img">
+          <img src="images/main-camera.png" alt="" />
+        </div>
+      </section>
+      <section class="sponsor-container">
+        <div class="sponsor-container">
+          <img src="logos/Alibaba.svg" alt="" />
+          <img src="logos/Walmart.svg" alt="" />
+          <img src="logos/Target.svg" alt="" />
+          <img src="logos/Rakuten.svg" alt="" />
+          <img src="logos/Ebay.svg" alt="" />
+          <img src="logos/Amazon.svg" alt="" />
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
