pupoler section responsive fininished

--- a/index.html
+++ b/index.html
@@ -43,6 +43,96 @@
           <img src="logos/Amazon.svg" alt="" />
         </div>
       </section>
+      <section class="pupolur-section-container">
+        <div class="populur-title">
+          <h1 class="title">Popular Collection</h1>
+        </div>
+        <div class="img-container">
+          <div class="img-card">
+            <img src="images/mic.png" alt="" />
+            <h1>Flex Tripod</h1>
+            <h2>$50.48</h2>
+            <p>
+              Wordwide shifting available Buyers <br />
+              protection possible!
+            </p>
+          </div>
+          <div class="img-card">
+            <img src="images/mic.png" alt="" />
+            <h1>Flex Tripod</h1>
+            <h2>$50.48</h2>
+            <p>
+              Wordwide shifting available Buyers <br />
+              protection possible!
+            </p>
+          </div>
+          <div class="img-card">
+            <img src="images/mic.png" alt="" />
+            <h1>Flex Tripod</h1>
+            <h2>$50.48</h2>
+            <p>
+              Wordwide shifting available Buyers <br />
+              protection possible!
+            </p>
+          </div>
+          <div class="img-card">
+            <img src="images/mic.png" alt="" />
+            <h1>Flex Tripod</h1>
+            <h2>$50.48</h2>
+            <p>
+              Wordwide shifting available Buyers <br />
+              protection possible!
+            </p>
+          </div>
+          <div class="img-card">
+            <img src="images/mic.png" alt="" />
+            <h1>Flex Tripod</h1>
+            <h2>$50.48</h2>
+            <p>
+              Wordwide shifting available Buyers <br />
+              protection possible!
+            </p>
+          </div>
+          <div class="img-card">
+            <img src="images/mic.png" alt="" />
+            <h1>Flex Tripod</h1>
+            <h2>$50.48</h2>
+            <p>
+              Wordwide shifting available Buyers <br />
+              protection possible!
+            </p>
+          </div>
+          <div class="img-card">
+            <img src="images/mic.png" alt="" />
+            <h1>Flex Tripod</h1>
+            <h2>$50.48</h2>
+            <p>
+              Wordwide shifting available Buyers <br />
+              protection possible!
+            </p>
+          </div>
+          <div class="img-card">
+            <img src="images/mic.png" alt="" />
+            <h1>Flex Tripod</h1>
+            <h2>$50.48</h2>
+            <p>
+              Wordwide shifting available Buyers <br />
+              protection possible!
+            </p>
+          </div>
+          <div class="img-card">
+            <img src="images/mic.png" alt="" />
+            <h1>Flex Tripod</h1>
+            <h2>$50.48</h2>
+            <p>
+              Wordwide shifting available Buyers <br />
+              protection possible!
+            </p>
+          </div>
+      </section>
+      <div class="see-more">See more.....</div>
+</div>
+
     </main>
     <footer></footer>
   </body>
