--- a/index.html
+++ b/index.html
@@ -132,6 +132,17 @@
       </section>
       <div class="see-more">See more.....</div>
 </div>
+<section class="feature-container">
+  <div class="feature-img">
+    <img src="images/setup.png" alt="">
+  </div>
+  <div class="feature-content">
+    <h1>Featured products at one place</h1>
+    <p>Amet minim mollit non deserunt ullamco est sit aliqua <br> dolor do amet sint. Velit officia consequat duis enim velit mollit. <br> Exercitation veniam consequat sunt nostrud amet.</p>
+    <button    class="btn-primary">Join Now</button>
+  </div>
+
+</section>
 
     </main>
     <footer></footer>
