--- a/index.html
+++ b/index.html
@@ -144,7 +144,17 @@
 
 </section>
 
+<footer  class="footer">
+  <div class="footer-content">
+    <h1>influencer products</h1>
+    <p>Lorem ipsum dolor sit amet.
+    </p>
+    <small>Lorem, ipsum dolor.</small>
+  </div>
+
+</footer>
+
     </main>
-    <footer></footer>
+   
   </body>
 </html>
